--- a/config/locales/cy.yml
+++ b/config/locales/cy.yml
@@ -774,14 +774,14 @@ cy:
         search: "Chwilio"
         search placeholder: "Chwiliwch Gynlluniau%{category}"
         subscribe to plan: "Dechrau'r Cynllun"
-        previous day: "PREV DAY"
-        next day: "NEXT DAY"
+        previous day: "Blaenorol"
+        next day: "Nesaf"
         reading completed _ mark and show next: "Nesaf: %{next_reference}"
         which reading: "%{current}o %{total}"
         done reading: "Wedi gorffen"
         no verses: "No verses for today"
         no content: "Does dim cynnwys wedi'i glustnodi am heddiw felly mae marc ‘wedi ei gwblhau’ arno."
-        read today: "This day’s reading"
+        read today: "Darlleniad Heddiw"
         devotional: "Defosiynol"
         completion status _ below percentage: "Cwblhawyd"
         current progress html: "Diwrnod <b>%{day}</b>o <b>%{total_days}</b>"
