--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -167,7 +167,7 @@ pl:
     badges title: "Odznaczenia"
     currently selected: "Obecnie wybrane:"
     read reference: "Czytaj %{reference}"
-    read chapter: "Read full chapter"
+    read chapter: "Czytaj cały rozdział"
     compare all versions: "Porównaj wszystkie wersje"
     link will be added: "zostanie dodane"
     my picture: "Uaktualnij moje zdjęcie"
@@ -224,7 +224,7 @@ pl:
     note: "Nowa notatka"
     selected: "wybrane"
     chapter: "Rozdział"
-    home: "Home"
+    home: "§"
     bible: "Biblia"
     notes title: "Notatki"
     friends: "Przyjaciele"
@@ -1083,18 +1083,18 @@ pl:
         load error: "Pojawił się problem z ładowaniem przekładów. Zamknij to menu i otwórz ponownie, aby spróbować jeszcze raz."
     campaigns: 
         christmas: 
-            tracker title: "Christmas Story Tracker"
-            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
-            facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
-            verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
-            read more: "Read the amazing story of Christmas"
-            read about: "Reading about the birth of Jesus"
-            totals since: "YouVersion totals since December 1, 2014:"
-            total installs: "Total installs on smartphones and tablets"
-            download: "Download the free Bible App"
-            versions: "Over %{version_count} versions in %{language_count} languages"
-            tagline: "the Bible that goes with you anywhere"
-            chapter counter format: "9,999,999"
+            tracker title: "Historia Bożego Narodzenia"
+            twitter text: "Oglądaj świat czytający o narodzinach Jezusa. Podziel się historią Bożego Narodzenia @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Podziel się historią Bożego Narodzenia kiedy ludzie na całym świecie czytają o narodzinach Jezusa.  W kościele czy domu, w pobliżu ludzi których kochamy czy podczas spokojnej samotnej chwili, zatrzymujemy się aby zastanowić się nad cudowną miłością Boga do nas."
+            verse: "<sup>10 </sup> I rzekł do nich anioł:<br>“ Nie bójcie się, bo oto zwiastuję wam radość wielką, która będzie udziałem wszystkiego ludu, <sup>11 </sup> Gdyż dziś narodził się wam Zbawiciel, którym jest Chrystus Pan, w mieście Dawidowym.”"
+            read more: "Czytaj niesamowitą historię Bożego Narodzenia"
+            read about: "Czytamy o narodzinach Jezusa"
+            totals since: "Licznik YouVersion licznik od 1 grudnia 2014:"
+            total installs: "Łączna ilość zainstalowań na smartfonach i tabletach"
+            download: "Pobierz darmową wersję Aplikacji Biblii"
+            versions: "Pond %{version_count} wersji w %{language_count} językach"
+            tagline: "Biblia, która idzie z tobą wszędzie"
+            chapter counter format: "9 999 999"
         100m: 
             logo: "YouVersion: Aplikacja Biblii"
             tagline: "Zaczyna się od <em>100 milionów</em>"
