--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -129,8 +129,8 @@ pt:
             in partnership: "em parceria com"
             one hope: "One Hope: Extraordinário conteúdo Bíblico para Crianças"
         links: 
-            apple: "https://itunes.apple.com/us/app/bible-for-kids/id668692393?ls=1&mt=8"
-            google: "http://play.google.com/store/apps/details?id=com.bible.kids"
+            apple: "https://itunes.apple.com/pt/app/bible-for-kids/id668692393?ls=1&mt=8"
+            google: "https://play.google.com/store/apps/details?id=com.bible.kids&featurem&hl=pt_br"
             amazon: "http://www.amazon.com/gp/product/B00GURLC40"
     now: "Agora"
     celebrating 50MM: "Comemorando 50 milhões de instalações!"
@@ -1081,15 +1081,15 @@ pt:
         christmas: 
             tracker title: "História do Natal"
             twitter text: "Assista o mundo lendo sobre o nascimento de Jesus. Compartilhe a História do Natal @YouVersion:https://www.bible.com/christmas"
-            facebook text: "Compartilhe a História do Natal com as pessoas ao redor do mundo enquanto lemos sobre o nascimento de Jesus.  Na igreja ou em casa, perto das pessoas que amamos ou durante um momento a sós, paramos para refletir sobre o maravilhoso amor de Deus por nós."
+            facebook text: "Compartilhe a História do Natal com as pessoas ao redor do mundo enquanto lemos sobre o nascimento de Jesus.  Na igreja ou em casa, perto das pessoas que amamos ou durante um momento a sós, paremos para refletir sobre o maravilhoso amor de Deus por nós."
             verse: "<sup>10</sup> Mas o anjo disse:<br>— “Não tenham medo!  Estou aqui a fim de trazer uma boa notícia para vocês, e ela será motivo de grande alegria também para todo o povo! <sup>11</sup> Hoje mesmo, na cidade de Davi, nasceu o Salvador de vocês — o Messias, o Senhor!”"
             read more: "Leia a incrível história do Natal"
-            read about: "Lendo sobre o nascimento de Jesus"
-            totals since: "Totais do YouVersion desde 1 de Dezembro, 2014"
+            read about: "Pessoas lendo sobre o nascimento de Jesus"
+            totals since: "Números totais do YouVersion desde 1 de Dezembro de 2014"
             total installs: "Total de instalações em smartphones e tablets"
             download: "Baixe grátis o App da Bíblia"
             versions: "Mais de %{version_count} versões em %{language_count}idiomas"
-            tagline: "a Bíblia que vai com você para qualquer lugar"
+            tagline: "A Bíblia que vai com você a qualquer lugar"
             chapter counter format: "9.999,999"
         100m: 
             logo: "YouVersion: O app da Bíblia"
