--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -224,7 +224,7 @@ vi:
     note: "Ghi chú mới"
     selected: "Đã chọn"
     chapter: "Đoạn"
-    home: "Home"
+    home: "Trang nhà"
     bible: "Kinh Thánh"
     notes title: "Ghi chú"
     friends: "Bạn bè"
@@ -1077,18 +1077,18 @@ vi:
         load error: "Xin lỗi bạn, có vấn đề khi tải thêm bản dịch. Hãy đóng trình đơn này rồi mở ra thử lại."
     campaigns: 
         christmas: 
-            tracker title: "Christmas Story Tracker"
-            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
-            facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
-            verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
-            read more: "Read the amazing story of Christmas"
-            read about: "Reading about the birth of Jesus"
-            totals since: "YouVersion totals since December 1, 2014:"
-            total installs: "Total installs on smartphones and tablets"
-            download: "Download the free Bible App"
-            versions: "Over %{version_count} versions in %{language_count} languages"
-            tagline: "the Bible that goes with you anywhere"
-            chapter counter format: "9,999,999"
+            tracker title: "Mạng Theo Dõi Câu Chuyện Giáng Sinh"
+            twitter text: "Xem toàn thế giới đọc về sự giáng sinh của Chúa Jêsus. Chia sẻ \"Mạng Theo Dõi Câu Chuyện Giáng Sinh\" @YouVersion: https://www.bible.com/christmas"
+            facebook text: "Chia sẻ câu chuyện Giáng Sinh để mọi người trên thế giới biết về sự giáng thế của Chúa Jêsus.  Ở Hội Thánh hoặc ở nhà, bên cạnh những người chúng ta yêu thương hoặc trong những khoảnh khắc yên tĩnh một mình, chúng ta ngừng lại để chiêm nghiệm tình yêu Chúa dành cho chúng ta thật tuyệt vời biết bao."
+            verse: "<sup>10</sup> Nhưng thiên sứ bảo họ:<br>“Đừng sợ! Nầy, ta báo cho các ngươi một tin lành, đây sẽ là niềm vui lớn cho mọi người. <sup>11</sup> Vì hôm nay tại thành Đa-vít, một Đấng Cứu Thế, là Đấng Christ, là Chúa đã được sinh ra cho các ngươi.”"
+            read more: "Đọc câu chuyện Giáng Sinh diệu kỳ"
+            read about: "Đọc về sự giáng sinh của Chúa Jêsus"
+            totals since: "trên YouVersion kể từ ngày 1 tháng 12, năm 2014:"
+            total installs: "Tổng số cài đặt trên điện thoại thông minh và máy tính bảng"
+            download: "Tải App Kinh Thánh miễn phí"
+            versions: "Hơn %{version_count} bản dịch thuộc %{language_count} ngôn ngữ"
+            tagline: "Kinh Thánh đồng hành với bạn mọi nơi"
+            chapter counter format: "9.999.999"
         100m: 
             logo: "YouVersion: App Kinh Thánh"
             tagline: "Khởi đầu với <em>100 triệu</em>"
