--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1087,18 +1087,18 @@ ar:
         load error: "عذرا، هناك مشكلة في تحميل المزيد من الإصدارات. أغلق هذه القائمة و افتحها مرة اخرى لإعادة المحاولة."
     campaigns: 
         christmas: 
-            tracker title: "متابعة قصة عيد الميلاد"
-            twitter text: "شاهد العالم وهو يقرأ عن ولادة يسوع. شارك بمتابعة قصة الميلاد على @YouVersion:  https://www.bible.com/christmas"
-            facebook text: "شارك بمتابعة قصة الميلاد بينما يقرأ الناس من جميع أنحاء العالم عن ولادة يسوع. في الكنيسة أو في المنزل، بالقرب من أشخاص نحبهم أو أثناء لحظة هدوء، نتوقف قليلاً للتفكير في أعجوبة حب الله لنا."
+            tracker title: "عداد قصة الميلاد"
+            twitter text: "شاهد العالم وهو يقرأ عن ميلاد يسوع. شارك بمتابعة قصة الميلاد على @YouVersion:  https://www.bible.com/christmas"
+            facebook text: "شارك بمتابعة قصة الميلاد بينما يقرأ الناس من جميع أنحاء العالم عن ميلاد يسوع. في الكنيسة أو في المنزل، بالقرب من أشخاص نحبهم أو أثناء لحظة هدوء، نتوقف قليلاً للتفكير في أعجوبة حب الله لنا."
             verse: "<sup>١٠</sup> ولكن قال لهم الملاك,\n“لا تخافوا. ها أنا أُبَشّرُكُم بِخَبرٍ عظيمٍ يَفرَحُ لَه جميعُ الشّعبِ. <sup>١١</sup> وُلِدَ لكُمُ اليومَ في مدينةِ داودَ مُخلّصٌ؛ هوَ المَسيحُ الرّبّ.”"
             read more: "إقرأ قصة الميلاد المذهلة"
-            read about: "القراءة عن ولادة يسوع المسيح"
-            totals since: "يبلغ العدد الإجمالي لYouVersion منذ ١ ديسمبر ٢٠١٤:"
+            read about: "عدد قراء قصة ميلاد يسوع"
+            totals since: " منذ ١ ديسمبر ٢٠١٤ على YouVersion يبلغ:"
             total installs: "عدد مرات التحميل على الهواتف النقالة والألواح الذكية."
             download: "حَمِل تطبيق الكتاب المقدس المجاني"
             versions: "أكثر من %{version_count} إصدار في %{language_count} لغة"
-            tagline: "الكتاب المقدس الذي يذهب معك في أي مكان"
-            chapter counter format: "٩,٩٩٩,٩٩٩"
+            tagline: "الكتاب المقدس معك في أي مكان"
+            chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion : تطبيق الكتاب المقدس"
             tagline: "تبدأ من <em> 100 مليون </em>"
