--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -224,7 +224,7 @@ ca:
     note: "Nova nota"
     selected: "Seleccionat/ada"
     chapter: "Capítol"
-    home: "Home"
+    home: "Inici"
     bible: "La Bíblia"
     notes title: "Notes"
     friends: "Amics"
@@ -1079,17 +1079,17 @@ ca:
         load error: "Ho sentim, hi ha hagut un problema carregant més versions. Tanca aquest menú i intenta tornar-lo a obrir."
     campaigns: 
         christmas: 
-            tracker title: "Christmas Story Tracker"
-            twitter text: "Watch the world read about the birth of Jesus. Share the Christmas Story Tracker @YouVersion: https://www.bible.com/christmas"
-            facebook text: "Share the Christmas Story Tracker as people around the world read about the birth of Jesus.  In church or at home, near people we love or during a quiet moment alone, we're pausing to reflect on the wonder of God's love for us."
-            verse: "<sup>10</sup> But the angel said to them,<br>“Do not be afraid. I bring you good news that will cause great joy for all the people. <sup>11</sup> Today in the town of David a Savior has been born to you; he is the Messiah, the Lord.”"
-            read more: "Read the amazing story of Christmas"
-            read about: "Reading about the birth of Jesus"
-            totals since: "YouVersion totals since December 1, 2014:"
-            total installs: "Total installs on smartphones and tablets"
-            download: "Download the free Bible App"
-            versions: "Over %{version_count} versions in %{language_count} languages"
-            tagline: "the Bible that goes with you anywhere"
+            tracker title: "La història del Nadal"
+            twitter text: "Mira com el món llegeix sobre el naixement de Jesús. Comparteix el Marcador de la Història del Nadal de YouVersion:https://www.bible.com/christmas"
+            facebook text: "Comparteix el Marcador de la Història del Nadal mentre gent d'arreu del món llegeix sobre el naixement de Jesús.  A l'església o a casa, prop de gent que estimem o durant un moment de silencia tot sol, ens aturem per reflexionar sobre la meravella de l'amor de Déu cap a nosaltres."
+            verse: "<sup>10</sup> Però l’àngel els digué:<br>No tingueu por.  Us anuncio una bona nova que portarà a tot el poble una gran alegria: <sup>11</sup> avui, a la ciutat de David, us ha nascut un salvador, que és el Messies, el Senyor.”"
+            read more: "Llegeix la increïble història del Nadal"
+            read about: "Llegint sobre el naixement de Jesús"
+            totals since: "Número de lectures de YouVersion des de l'1 de desembre de 2014:"
+            total installs: "instal·lacions a smartphones i tauletes"
+            download: "Descarrega l'aplicació de la Bíblia de franc"
+            versions: "Més de %{version_count} versions en %{language_count} idiomes"
+            tagline: "la Bíblia que va amb tu a tot arreu"
             chapter counter format: "9,999,999"
         100m: 
             logo: "YouVersion: l'aplicació de la Bíblia"
