--- a/config/locales/cs.yml
+++ b/config/locales/cs.yml
@@ -1083,8 +1083,8 @@ cs:
         christmas: 
             tracker title: "Po stopách vánočního příběhu"
             twitter text: "Sledujte svět, který čte příběh o narození Ježíše. Sdílejte \"Po stopách vánočního příběhu\" na @YouVersion: https://www.bible.com/christmas"
-            facebook text: "Podělte se o vánoční příběh, aby si lidé na celém světe mohli přečíst o narození Ježíše.  Ve společenství věřících nebo doma, s blízkými milými lidmi nebo během ztišení o samotě, se nyní zastavme nad zázrakem lásky, kterou nám projevil Bůh."
-            verse: "<sup>10</sup> Tedy řekl jim anděl: <br>“Nebojte se. Přináším vám dobrou zprávu, ze které se mohou radovat všichni lidé. <sup>11</sup> Dnes ve městě Davidově se vám narodil Zachránce; Kristus Pán.&quot;"
+            facebook text: "Rozdělte se s vánočním příběhem o narození Ježíše, aby si jej lidé na celém světe mohli přečíst.  Ve společenství věřících nebo doma, s blízkými milými lidmi nebo během ztišení o samotě, se nyní zastavme nad zázrakem lásky, kterou nám projevil Bůh."
+            verse: "<sup>10</sup> Tedy řekl jim anděl: <br>“Nebojte se! Přináším vám dobrou zprávu, ze které se mohou radovat všichni lidé. <sup>11</sup> Dnes ve městě Davidově se vám narodil Zachránce; Kristus Pán.&quot;"
             read more: "Přečtěte si úchvatný vánoční příběh"
             read about: "Čtení o narození Ježíše Krista"
             totals since: "Celkem přečetlo v aplikaci Bible od 1. prosince 2014:"
