--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1079,18 +1079,18 @@ de:
         load error: "Leider gab es ein Problem beim Laden weiterer Übersetzungen. Schließe dieses Menü und öffne es erneut, um es noch einmal zu versuchen."
     campaigns: 
         christmas: 
-            tracker title: "Anzahl der Aufrufe"
+            tracker title: "Die Weihnachtsgeschichte"
             twitter text: "Schau zu, wie die Welt die Geschichte von der Geburt Jesu liest. Teile den Weihnachtsgeschichten-Tracker @YouVersion: https://www.bible.com/christmas"
             facebook text: "Teile den Weihnachtsgeschichten-Tracker, während die Menschen weltweit von Jesu Geburt lesen.  In der Kirche wie auch zuhause, bei unseren Geliebten oder alleine während einem ruhigen Moment verharren wir, um über das Wunder von Gottes Liebe zu uns nachzudenken."
-            verse: "<sup>10</sup> Aber der Engel sagte:<br>“Fürchtet euch nicht! Ich verkünde euch eine Botschaft, die das ganze Volk mit grosser Freude erfüllt: <sup>11</sup> Heute ist euch in der Stadt, in der schon David geboren wurde, der lang ersehnte Retter zur Welt gekommen. Es ist Christus, der Herr.”"
-            read more: "Lese die unglaubliche Weihnachtsgeschichte"
+            verse: "<sup>10</sup> aber der Engel sagte:<br/> »Fürchtet euch nicht! Ich verkünde euch eine Botschaft, die das ganze Volk mit großer Freude erfüllt: <sup>11</sup> Heute ist für euch in der Stadt, in der schon David geboren wurde, der lang ersehnte Retter zur Welt gekommen. Es ist Christus, der Herr.&quot;"
+            read more: "Lies die Weihnachtsgeschichte. Sie ist herrlich!"
             read about: "Von Jesu Geburt lesen"
-            totals since: "Gesamtzahl von YouVersion-Downloads seit dem 1. Dezember 2014:"
+            totals since: "wurde seit dem 1. Dezember 2014 schon so oft aufgerufen:"
             total installs: "Installationen auf Smartphones und Tablets"
-            download: "Lade die Bibel App gratis herunter"
-            versions: "Über %{version_count} Übersetzungen in %{language_count} Sprachen"
-            tagline: "So hast du die Bibel immer dabei!"
-            chapter counter format: "9'999'999"
+            download: "Lade dir die Bibel App gratis herunter!"
+            versions: "Mit der Bibel hast du über %{version_count} Übersetzungen in %{language_count} Sprachen"
+            tagline: "immer dabei - egal wo du bist!"
+            chapter counter format: "9.999.999"
         100m: 
             logo: "YouVersion: Die Bibel App"
             tagline: "Es beginnt mit <em>100 Millionen</em>"
